# timecop

./: .gitignore  CLAUDE.md  Cargo.toml  KUMITE.md  README.md  REVENGE_PLAN.md  TODO.md  TRAINING.md  TWINS.md  UNISOL_SPECS.md  go.mod  go.sum  install.sh  main.go
.github/workflows/: ci.yml  release.yml
docs/: DIFF_ALGORITHM.md  architecture.md  design.md
internal/app/: app.go  messages.go  state.go
internal/config/: config.go
internal/git/: client.go  git.go
internal/github/: github.go
internal/keys/: keys.go
internal/layout/: layout.go
internal/ui/: colors.go  styles.go
internal/window/: base.go  commitlist.go  diffview.go  filelist.go  fileview.go  help.go  prsummary.go  window.go
kimchi_crab/src/: app.rs  main.rs
kimchi_crab/src/git/: client.rs
kimchi_crab/src/ui/widgets/: diff_view.rs  file_list.rs
src/: app.rs  async_loader.rs  config.rs  event.rs  main.rs  theme.rs
src/git/: client.rs  mod.rs  types.rs
src/github/: mod.rs
src/ui/: layout.rs  mod.rs  syntax.rs
src/ui/widgets/: action.rs  commit_list.rs  diff_parser.rs  diff_view.rs  file_list.rs  help.rs  input_modal.rs  mod.rs  pr_info.rs  scroll.rs
src/ui/widgets/diff_view/: mod.rs  parser.rs
src/ui/widgets/file_list/: mod.rs
src/ui/widgets/help/: mod.rs
src/ui/widgets/input/: mod.rs
src/ui/widgets/pr_details/: mod.rs
src/ui/widgets/pr_list/: mod.rs
