[package]
name = "kimchi"
version = "0.1.0"
edition = "2021"
description = "AI-native code review TUI"
authors = ["Kamil Macinski"]
license = "MIT"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# File watching
notify = "7"
notify-debouncer-mini = "0.5"

# Git operations (native, no shell)
git2 = "0.19"

# CLI
clap = { version = "4", features = ["derive"] }

# Clipboard
arboard = "3"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
log = "0.4"
env_logger = "0.11"

# Serialization (for GitHub API)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Process for gh CLI
tokio-process = "0.2"

# Time
chrono = "0.4"

# Unicode width for proper text rendering
unicode-width = "0.2"

# Syntax highlighting
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
syntect-tui = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
