[package]
name = "timecop"
version = "0.1.0"
edition = "2021"
description = "AI-native code review TUI"
authors = ["Kamil Macinski"]
license = "MIT"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# File watching
notify = "7"
notify-debouncer-mini = "0.5"
ignore = "0.4"

# Git operations (native, no shell)
git2 = { version = "0.19", features = ["vendored-openssl"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Clipboard
arboard = "3"

# Error handling
anyhow = "1"
thiserror = "2"

# Unix terminal operations (for theme detection) - Unix only
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["poll", "term"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Serialization (for GitHub API)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Unicode width for proper text rendering
unicode-width = "0.2"

# Syntax highlighting
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
